<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    >

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UserActivities.SignupActivity">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/checklist"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/signup"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_margin="30dp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textColor="@color/black"
            android:inputType="text"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:inputType="phone"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/confirm_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:backgroundTint="@color/button"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/login_page_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/have_an_account_login_here"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

</ScrollView>