<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".UserActivities.PasswordChangeActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/resetpassword"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/cp_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/cp_useremail_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/cp_username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/cp_userpassword_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/cp_userconfirmpassword_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/cp_changepassword_btn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        />

</LinearLayout>