<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/login"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_btn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/signup_page_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/new_user_register_here"
            android:layout_margin="10dp"
            android:layout_gravity="center" />


    </LinearLayout>


</ScrollView>